--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,7 @@
 /web/core/
 /web/modules/contrib/
 /web/themes/contrib/
-/web/profiles/contrib/
+# /web/profiles/contrib/
 /web/libraries/
 
 # Ignore sensitive information
