Installed modules abd theme. Exported config

--- a/config/sync/system.site.yml
+++ b/config/sync/system.site.yml
@@ -1,5 +1,5 @@
 uuid: 2c7760bb-7bd5-4a47-b1a1-8da2a1c2b3a6
-name: 'Drupal 8'
+name: 'Drupal 8 dddd'
 mail: sajjad.haider@albarari.ae
 slogan: ''
 page:
